# xpad

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  acinclude.m4  configure.ac  xpad.desktop.in
autopackage/: Makefile.am  default.apspec.in
doc/: Makefile.am  xpad.1
images/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  af.po  bg.po  cs.po  da.po  de.po  en_GB.po  es.po  et.po  fi.po  fr.po  ga.po  hr.po  hu.po  it.po  ja.po  ko.po  lv.po  ms.po  nl.po  pt.po  ro.po  ru.po  rw.po  sk.po  sl.po  sv.po  th.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  fio.c  fio.h  help.c  help.h  prefix.c  prefix.h  xpad-app.c  xpad-app.h  xpad-grip-tool-item.c  xpad-grip-tool-item.h  xpad-pad-group.c  xpad-pad-group.h  xpad-pad-properties.c  xpad-pad-properties.h  xpad-pad.c  xpad-pad.h  xpad-preferences.c  xpad-preferences.h  xpad-session-manager.c  xpad-session-manager.h  xpad-settings.c  xpad-settings.h  xpad-text-buffer.c  xpad-text-buffer.h  xpad-text-view.c  xpad-text-view.h  xpad-toolbar.c  xpad-toolbar.h  xpad-tray.c  xpad-tray.h  xpad-undo.c  xpad-undo.h
